<resources>
    <string name="app_name">Jodern</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Đã có lỗi xảy ra. Bạn vui lòng thử lại nhé!</string>
    <string name="search_hint">Bạn tìm gì hôm nay?</string>
    <string name="title_activity_cart">CartActivity</string>

    <string name="cart_header">Giỏ hàng</string>
    <string name="check_out">Đặt hàng</string>
    <string name="total">Tổng thanh toán</string>
    <string name="shipping">Vận chuyển</string>
    <string name="sub_total">Tổng cộng</string>
    <string name="go_to_cart">Xem giỏ hàng</string>
    <string name="go_to_wishlist">Xem danh sách</string>
    <string name="skip_snackbar">Ẩn</string>

    <string name="facebook_app_id">5398312196963078</string>
    <string name="facebook_client_token">8c9fb32b313ad721da8cb00cb6aebd3b</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaHV1dGhpZW4iLCJhIjoiY2xieXEzNG53MHE2OTNubW43YW0yNHQ1YyJ9.8AYtDEF-T4Y2cc6htmBEDg</string>
</resources>