<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity">

  <ScrollView
      android:id="@+id/cartScrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

      <TextView
          android:id="@+id/cartTextView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginBottom="20dp"
          android:layout_weight="1"
          android:fontFamily="@font/quicksand_bold"
          android:text="@string/cart_header"
          android:textAlignment="center"
          android:textColor="@color/primary_dark"
          android:textSize="20sp"
          android:textStyle="bold" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/cartRecyclerView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="30dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="50dp"
          android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="10dp"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/subTotal_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/sub_total" />

        <TextView
            android:id="@+id/subTotalValue_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:text="TextView" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="10dp"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/shipping_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/shipping" />

        <TextView
            android:id="@+id/shippingValue_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:text="TextView" />
      </LinearLayout>


      <View
          android:id="@+id/view"
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="10dp"
          android:background="@drawable/light_line" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="30dp"
          android:layout_marginRight="30dp"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/total_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalValue_CartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:text="TextView" />
      </LinearLayout>

      <Button
          android:id="@+id/checkoutBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="30dp"
          android:backgroundTint="@color/primary"
          app:cornerRadius="30dp"
          android:fontFamily="@font/quicksand_bold"
          android:text="@string/check_out"/>
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>