<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartSummaryDialogWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/shape_cart_sum_container"
    android:orientation="vertical"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_total"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cartSummarySubTotalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="70.000 VNĐ"
            android:textAlignment="viewEnd"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cartSummaryShippingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30.000 VNĐ"
            android:textAlignment="viewEnd"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalCartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartSummaryTotalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100.000 VNĐ"
            android:textAlignment="viewEnd"
            android:textColor="@color/primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cartSummaryCheckoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_dark"
        android:paddingLeft="20dp"
        android:paddingTop="8dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:text="Đặt hàng"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp" />
</LinearLayout>

