<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.CartFragment"
    android:id="@+id/cartParentView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp">

                <ImageButton
                    android:id="@+id/cartBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/cart_image_shape"
                    android:padding="10dp"
                    android:src="@drawable/ic_back"
                    app:tint="@color/primary_dark" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Giỏ hàng"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/cartLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:paddingBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_cart_sum_container"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_total"
                        android:textSize="16sp" />

                    <TextView
                        android:textColor="@color/text"
                        android:id="@+id/cartSubTotalText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="70.000 VNĐ"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shipping"
                        android:textSize="16sp" />

                    <TextView
                        android:textColor="@color/text"
                        android:id="@+id/cartShippingText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="30.000 VNĐ"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/primary_dark"
                        android:id="@+id/totalCartTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:textColor="@color/primary_dark"
                        android:id="@+id/cartTotalText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="100.000VNĐ"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detailAddToCartBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/primary"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="Đặt hàng"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    app:cornerRadius="16dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/cartEmptyWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/searchImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/empty_cart" />
            </LinearLayout>

            <TextView
                android:id="@+id/searchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Giỏ hàng của bạn đang trống.\nMua sắm với Jodern ngay nào!"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cartLoadingWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_overlay"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary" />

    </LinearLayout>
</FrameLayout>